# humanhash-system

./: .gitignore  LICENSE  README.md  docker-compose.yml  generate_project.sh  specifications.md  user-guide.md
.github/workflow/: ci-cd.yaml
.github/workflows/: ci-cd.yaml
.github/workflows/client/: Dockerfile  package.json
HumanhashClient/: App.js  app.json  package-lock.json  package.json
HumanhashVerifier/: App.js  app.json  package-lock.json  package.json
biometric/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bitcoind  bitcoin  labeled_biometric_hashes.txt
biometric/bitcoin/: bitcoin.conf
biometric/src/: biometric.rs  main.rs  main.rs.bak  main.rs.bak3  main.rs.original
bitcoin-lnd-setup/: README.md  bitcoind-setup.sh  lnd-setup.sh
client/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
client/public/: index.html
client/src/: index.tsx
client/src/components/: BiometricUpload.tsx
client/src/utils/: crypto.ts
database/: schema.sql
docs/: README.md  api-spec.yaml  openapi.yaml  operational-guide.md  specifications.md  user-guide.md
kubernetes/: greeting_service.py  kuberay-endpointslices.yaml  raycluster.yaml
oracle/: Cargo.toml  Dockerfile  generate_keypair.rs  oracle_config.json  zkp_response.json
oracle/src/: main.rs  zkp.rs
popchain/: Cargo.toml  Dockerfile  popchain_config.json  test_lnd.rs
popchain/src/: main.rs
scripts/: generate_project.sh
security/: vault-config.yaml
system/: Cargo.toml  Dockerfile
system/src/: main.rs
