[package]
name = "humanhash-biometric"
version = "0.1.0"
edition = "2021"

[dependencies]
arkworks-gadgets = "0.4.20"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
ark-groth16 = "0.3.0"
arkworks-mimc = "0.3.0"
ark-relations = "0.3.0"
ark-bls12-381 = "0.3.0"
tokio = { version = "1.45.0", features = ["full"] }
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
lazy_static = "1.5.0"
ark-crypto-primitives = "0.3.0"
