[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
hyper = { version = "1.4", features = ["server"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
secp256k1 = { version = "0.28.2", features = ["rand-std", "serde"] }
sha2 = "0.10"
rand = "0.8"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
