[package]
name = "humanhash-popchain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bitcoin = "0.31.1"
rust-lightning = { git = "https://github.com/rust-lightning/rust-lightning", branch = "main" }
rand = "0.8"
